PR-Correccion-control-de-flujo/students/Catalin-Greu-Practica-estructuras-control/ClasificaTriangulo-results.txt
*********************************
**** COMMAND:
sh -c javac ClasificaTriangulo.java 
**** INPUT:
**** OUTPUT:
ClasificaTriangulo.java:34: error: unmappable character for encoding UTF8
		/* Hace el cuadrado de un lado y lo suma al cuadrado de otro. Si es igual al cuadrado del tercero, es rect�ngulo*/
		                                                                                                          ^
1 error
**** EXPECTED:
\s*error\s
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
4
2
3
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*escaleno.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
2
4
3
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*escaleno.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
4
3
2
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*escaleno.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
10
15
10
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*is.*sceles.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
15
10
10
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*is.*sceles.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
10
10
15
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*is.*sceles.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
1
1
1
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*equil.*tero.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
20
21
29
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
21
20
29
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
29
21
20
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
29
20
21
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
20
29
21
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
21
29
20
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*rect.*ngulo.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
1
1
100
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*imposible.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
100
1
1
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*imposible.*
**** SUCCESSFUL:false
*********************************

*********************************
**** COMMAND:
/usr/bin/java -cp . ClasificaTriangulo 
**** INPUT:
1
100
1
**** OUTPUT:
Error: Could not find or load main class ClasificaTriangulo
**** EXPECTED:
(?i).*imposible.*
**** SUCCESSFUL:false
*********************************

